--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -533,6 +533,12 @@ radio.ctraddontab .radio-check-box1 {
   min-height:16px !important;
 }
 
+#ctraddon_pw_osearch_dm label {
+  background:url('chrome://classic_theme_restorer/content/images/small_dm.png') no-repeat left !important;
+  padding-left:20px !important;
+  min-height:16px !important;
+}
+
 #ctraddon_pw_loopcall label {
   background:url('chrome://classic_theme_restorer/content/images/loopcall.png') no-repeat left !important;
   padding-left:20px !important;
