--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -587,6 +587,7 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_pw_bmbunsortbm label,
 #ctraddon_pw_bmbunsortbm2 label,
 #ctraddon_pw_bmbutnotext label,
+#ctraddon_pw_bmbviewbmsb label ,
 #ctraddon_pw_bmbviewbmtb label,
 #ctraddon_pw_bmbnounsort label {
   background:url('chrome://classic_theme_restorer/content/images/bookmarks.png') no-repeat left !important;
