--- a/xpi/content/css/urlbar_results.css
+++ b/xpi/content/css/urlbar_results.css
@@ -1,7 +1,8 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @-moz-document url(chrome://browser/content/browser.xul){
 	
-	#PopupAutoCompleteRichResult .autocomplete-richlistbox {
+	panel[type="autocomplete-richlistbox"] .autocomplete-richlistbox,
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistbox {
 	  max-height: unset !important;
 	  height: auto !important;
 	}
