--- a/xpi/content/css/win8/overlayprefs_extra.css
+++ b/xpi/content/css/win8/overlayprefs_extra.css
@@ -36,6 +36,7 @@
 
 #ctraddon_closeicon_red, #ctraddon_closeicong_red,
 #ctraddon_closeicon_w7, #ctraddon_closeicong_w7,
+#ctraddon_closeicon_w7v2, #ctraddon_closeicong_w7v2,
 #ctraddon_closeicon_w8, #ctraddon_closeicong_w8,
 #ctraddon_closeicon_w10, #ctraddon_closeicong_w10,
 #ctraddon_closeicon_w10i, #ctraddon_closeicong_w10i,
