--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -250,6 +250,10 @@ radio.ctraddontab .radio-check-box1 {
   list-style-image:url('chrome://classic_theme_restorer/content/images/close.png');
   -moz-image-region: rect(0px, 16px, 16px, 0px);
 }
+#ctraddon_closeicon_w7v2, #ctraddon_closeicong_w7v2{
+  list-style-image:url('chrome://classic_theme_restorer/content/images/close_w7v2.png');
+  -moz-image-region: rect(0px, 16px, 16px, 0px);
+}
 #ctraddon_closeicon_w8, #ctraddon_closeicong_w8{
   list-style-image:url('chrome://classic_theme_restorer/content/images/close2.png');
   -moz-image-region: rect(0px, 16px, 16px, 0px);
@@ -273,12 +277,14 @@ radio.ctraddontab .radio-check-box1 {
 
 #ctraddon_closeicon_red:hover, #ctraddon_closeicong_red:hover,
 #ctraddon_closeicon_w7:hover, #ctraddon_closeicong_w7:hover,
+#ctraddon_closeicon_w7v2:hover, #ctraddon_closeicong_w7v2:hover,
 #ctraddon_closeicon_w8:hover, #ctraddon_closeicong_w8:hover,
 #ctraddon_closeicon_gc:hover, #ctraddon_closeicong_gc:hover {
   -moz-image-region: rect(0px, 32px, 16px, 16px);
 }
 #ctraddon_closeicon_red:active, #ctraddon_closeicong_red:active,
 #ctraddon_closeicon_w7:active, #ctraddon_closeicong_w7:active,
+#ctraddon_closeicon_w7v2:active, #ctraddon_closeicong_w7v2:active,
 #ctraddon_closeicon_w8:active, #ctraddon_closeicong_w8:active,
 #ctraddon_closeicon_gc:active, #ctraddon_closeicong_gc:active{
   -moz-image-region: rect(0px, 48px, 16px, 32px);
