--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -41,6 +41,7 @@
 	  margin-right: -8px !important;
 	}
 
+	#TabsToolbar,
 	#tabbrowser-tabs{
 	  min-height: 0px !important;
 	}
@@ -179,10 +180,6 @@
 	  margin-right: 0px !important;
 	  margin-top: -1px !important;
 	  margin-bottom: 0px !important;
-	}
-
-	#TabsToolbar {
-	  min-height: 0px !important;
 	}
 
 	.tabs-newtab-button{
