--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -560,7 +560,8 @@
 	toolbar[mode="text"] #urlbar #urlbar-reload-button .toolbarbutton-text,
 	toolbar[mode="text"] #urlbar #urlbar-stop-button .toolbarbutton-text,
 	toolbar[mode="text"] #urlbar #urlbar-go-button .toolbarbutton-text,
-	toolbar[mode="text"] .tabs-newtab-button .toolbarbutton-text {
+	toolbar[mode="text"] .tabs-newtab-button .toolbarbutton-text,
+	toolbar[mode="text"] #urlbar #feed-button .toolbarbutton-text {
 	  display: none !important;
 	}
 	
@@ -570,8 +571,38 @@
 	toolbar[mode="text"] #urlbar #urlbar-stop-button .toolbarbutton-icon,
 	toolbar[mode="text"] #urlbar #urlbar-go-button .toolbarbutton-icon,
 	toolbar[mode="text"] .tabs-newtab-button .toolbarbutton-icon,
-	toolbar[mode="text"] .tabbrowser-tab .tab-close-button .toolbarbutton-icon {
+	toolbar[mode="text"] .tabbrowser-tab .tab-close-button .toolbarbutton-icon,
+	toolbar[mode="text"] #urlbar #feed-button .toolbarbutton-icon {
 	  display:block !important;
+	}
+	
+	toolbar[mode="text"] #PanelUI-menu-button .toolbarbutton-icon {
+	  -moz-appearance: unset !important;
+	  display:block !important;
+	  visibility: hidden !important;
+	  -moz-margin-end: -42px !important;
+	  background: unset !important;
+	  box-shadow: unset !important;
+	  border: unset !important;
+	}
+
+	#nav-bar[mode="text"] #PanelUI-menu-button .toolbarbutton-icon {
+	  -moz-appearance: unset !important;
+	  display:block !important;
+	  visibility: hidden !important;
+	  -moz-margin-end: -22px !important;
+	  background: unset !important;
+	  box-shadow: unset !important;
+	  border-style: unset !important;
+	  border: unset !important;
+	  height: unset !important;
+	  min-height: unset !important;
+	  max-height: 1px !important;
+	  padding: unset !important;
+	}
+
+	#nav-bar[mode="text"] #PanelUI-menu-button .toolbarbutton-text {
+	  -moz-margin-start: -14px !important;
 	}
 	
 	/* support for old icons+text mode */
