--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -701,6 +701,7 @@ radio.ctraddontab .radio-check-box1 {
 }
 
 /*PM button menuitem*/
+#ctraddon_pw_puibutsep > description,
 #ctraddon_pw_appbutton_pm label,
 #ctraddon_pw_appbutton_pm2 label,
 #ctraddon_pw_pmhidelabels label {
