--- a/xpi/content/css/am_compact.css
+++ b/xpi/content/css/am_compact.css
@@ -14,8 +14,8 @@
 	  -moz-margin-start: -1px !important;
 	}
 	
-	#addons-page #updates-list .scrollbox-innerbox,
-	#addons-page #addon-list .scrollbox-innerbox{
+	#addons-page:not(.inSidebar) #updates-list .scrollbox-innerbox,
+	#addons-page:not(.inSidebar) #addon-list .scrollbox-innerbox{
 	  -moz-margin-end: -46px !important;
 	}
 
