--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -287,7 +287,8 @@
 
 	.tabbrowser-tab[selected="true"]:-moz-lwtheme,
 	.tabbrowser-tab[pinned]:-moz-lwtheme {
-	  background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.7) 50%) !important;
+	  /*background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.7) 50%) !important;*/
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
 	}
 	
 	.tabbrowser-tab[pinned]{
