--- a/xpi/content/css/padlock_amo.css
+++ b/xpi/content/css/padlock_amo.css
@@ -78,5 +78,8 @@
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_amo_mab.png) !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
-
+	
+	#connection-icon {
+	  filter: unset !important;
+	}
 }
