--- a/xpi/content/css/verifiedcolors.css
+++ b/xpi/content/css/verifiedcolors.css
@@ -96,5 +96,9 @@
 	  -moz-border-end: 1px solid;
 	  border-image-source: none !important;
 	}
+	
+	#connection-icon {
+	  filter: unset !important;
+	}
 
 }
