--- a/xpi/content/css/padlock2_modern.css
+++ b/xpi/content/css/padlock2_modern.css
@@ -60,5 +60,8 @@
 	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar[pageproxystate="valid"] .mixedActiveBlocked #connection-icon{
 	  width: 16px !important;
 	}
-
+	
+	#connection-icon {
+	  filter: unset !important;
+	}
 }
