--- a/xpi/content/css/padlock_modern2.css
+++ b/xpi/content/css/padlock_modern2.css
@@ -86,5 +86,8 @@
 	#main-window[fx45plus="true"]:not([defaultfxtheme="true"]) #urlbar *:not(.verifiedDomain):not(.verifiedIdentity):not(.insecureLoginForms):not(.mixedActiveContent):not(.weakCipher):not(.mixedDisplayContent):not(.mixedDisplayContentLoadedActiveBlocked):not(.mixedActiveBlocked) #connection-icon:not([scr]){
 	  width: 0px !important;
 	}
-
+	
+	#connection-icon {
+	  filter: unset !important;
+	}
 }
