--- a/xpi/content/css/mac/highertabsposextra.css
+++ b/xpi/content/css/mac/highertabsposextra.css
@@ -2,10 +2,20 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#main-window[tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]):not([customizing]) #TabsToolbar {
+	#main-window[tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]):not([customizing]):not([fx47plus="true"]) #TabsToolbar {
 	  margin-top: -6px !important;
 	}
-	#main-window[tabsintitlebar]:not([sizemode="normal"]):not([tabsontop="false"]):not([customizing]) #TabsToolbar {
+	#main-window[tabsintitlebar]:not([sizemode="normal"]):not([tabsontop="false"]):not([customizing]):not([fx47plus="true"]) #TabsToolbar {
 	  margin-top: -10px !important;
+	}
+	
+	/* Firefox 47 +*/
+	#main-window[tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]):not([customizing])[fx47plus="true"] #TabsToolbar,
+	#main-window[tabsintitlebar]:not([sizemode="normal"]):not([tabsontop="false"]):not([customizing])[fx47plus="true"] #TabsToolbar {
+	  margin-top: -10px !important;
+	}
+	#main-window[tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]):not([customizing])[fx47plus="true"] #titlebar,
+	#main-window[tabsintitlebar]:not([sizemode="normal"]):not([tabsontop="false"]):not([customizing])[fx47plus="true"] #titlebar {
+	  margin-bottom: -28px !important;
 	}
 }
