--- a/xpi/content/css/linux/classictabsextra2.css
+++ b/xpi/content/css/linux/classictabsextra2.css
@@ -20,6 +20,11 @@
 	}
 
 	/**/
+	
+	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
+	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%) !important;
+	}
+
 	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
 	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%),
 						linear-gradient(-moz-dialog, -moz-dialog);
@@ -33,16 +38,26 @@
 	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 	
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style][selected="true"]:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style][selected="true"]:-moz-lwtheme{
+	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%) !important;
+	}
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+	
 	.tabs-newtab-button:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 	
 	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(transparent,transparent) !important;
-	}
-	
-	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
-	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%) !important;
 	}
 	
 	/* toolbar buttons should not increase tab height */
