--- a/xpi/content/css/alt_autocompl_items.css
+++ b/xpi/content/css/alt_autocompl_items.css
@@ -2,12 +2,10 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 	
-	panel[type="autocomplete-richlistbox"] richlistitem[type="action searchengine heuristic"],
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="action searchengine heuristic"],
-	panel[type="autocomplete-richlistbox"] richlistitem[type="action visiturl heuristic"],
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="action visiturl heuristic"],
-	/*panel[type="autocomplete-richlistbox"] richlistitem[type="action switchtab"],
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="action switchtab"],*/
+	panel[type="autocomplete-richlistbox"] richlistitem[actiontype="visiturl"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"],
+	panel[type="autocomplete-richlistbox"] richlistitem[actiontype="searchengine"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"],
 	panel[type="autocomplete-richlistbox"] richlistitem[type="autofill heuristic"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] {
 	  display:none !important;
