--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -118,7 +118,7 @@
 
 	#nav-bar #notification-popup-box[hidden] + *,
 	#nav-bar #notification-popup-box + * {
-	  -moz-padding-start: 4px !important;
+	  /*-moz-padding-start: 4px !important;*/
 	  transition: none !important;
 	}
 	
