--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -7,7 +7,7 @@
 	}
 	
 	#nav-bar #notification-popup-box[hidden] + * {
-	  -moz-padding-start: 2px !important;
+	  /*-moz-padding-start: 2px !important;*/
 	  transition: none !important;
 	}
 	
